--- a/my-blog.css
+++ b/my-blog.css
@@ -1,16 +1,14 @@
 h1 {
   color: darkslategray;
   font-family: serif;
-}
-h6 {
-  color: green;
-  font-style: normal;
-  font-weight: bold;
-  font-family: tahoma sans-serif;
-}
-*{
-  font-family: Arial, Helvetica, sans-serif;
-}
-h1,p,h6 {
   font-weight: bolder;
+}
+p {
+  font-weight: bolder;
+}
+a {
+  color: green;
+  font-size: larger;
+  font-weight: bolder;
+  text-decoration: none;
 }
