--- a/CSS/verse.css
+++ b/CSS/verse.css
@@ -1,13 +1,12 @@
-body{
-    background-color:rgba(34, 32, 32, 0.966);
-    color: white;
-
+body {
+  background-color: rgba(34, 32, 32, 0.966);
+  color: white;
 }
 
-h3{
-    font-size: xx-large;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    
+h3 {
+  font-size: xx-large;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
 a {
@@ -19,24 +18,24 @@ a {
   font-family: sans-serif;
 }
 
-h2{
-   font-family: Arial, Helvetica, sans-serif;
-   margin-bottom: -1%;
-
+h2 {
+  font-family: Arial, Helvetica, sans-serif;
+  margin-bottom: -1%;
 }
-li{
-    margin-bottom: 1%;
-    font: 1.5em sans-serif;
-    font-weight: lighter;
+li {
+  margin-bottom: 1%;
+  font: 1.5em sans-serif;
+  font-weight: lighter;
 }
-#box{
-    text-align: end;
-    margin-top: -20px;
-
+#box {
+  text-align: end;
+  margin-top: -20px;
 }
-footer{
-    text-align: end;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    margin-top: -3%;
-    margin: 2%s;
+footer {
+  text-align: end;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  margin-top: -3%;
+  margin-bottom: 3%;
+  margin-right: 3%;
+  margin-left: 3%;
 }
