--- a/CSS/verse.css
+++ b/CSS/verse.css
@@ -7,6 +7,7 @@ h3 {
   font-size: xx-large;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  margin-bottom: 25px;
 }
 
 a {
@@ -21,6 +22,7 @@ a {
 h2 {
   font-family: Arial, Helvetica, sans-serif;
   margin-bottom: -1%;
+  padding-left: 0%;
 }
 li {
   margin-bottom: 1%;
