--- a/CSS/verse.css
+++ b/CSS/verse.css
@@ -2,42 +2,71 @@ body {
   background-color: rgba(34, 32, 32, 0.966);
   color: white;
 }
-
 h3 {
-  font-size: xx-large;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  margin-bottom: 25px;
+  text-align: start;
+  font-size: 30px;
 }
-
 a {
-  color: white;
-  font-size: large;
-  font-weight: light;
   text-decoration: none;
-  margin-right: 2%;
+  color: white;
+  font-size: 150%;
+  margin-right: 30px;
+  text-align: center;
   font-family: sans-serif;
+  margin: 10px;
 }
-
 h2 {
-  font-family: Arial, Helvetica, sans-serif;
-  margin-bottom: -1%;
-  padding-left: 0%;
+  font-size: 40px;
+  font-weight: normal;
+  font-family: "Segoe UI";
+  border: 4px solid green;
+  margin-bottom: 20px;
 }
-li {
-  margin-bottom: 1%;
-  font: 1.5em sans-serif;
-  font-weight: lighter;
+.strong ul{
+  list-style: disc;
+  padding-left: 20px;
+  margin-bottom: 30px;
 }
 #box {
   text-align: end;
-  margin-top: -20px;
+  border: 4px solid yellow;
+  margin-top: 0%;
+}
+
+#card {
+  background-color: rgba(80, 80, 77, 0.4);
+  color: whitesmoke;
+  text-align: center;
+  background-size: 50%; 
+  margin-left: 47%;
+  margin-right: 47%;
+  padding: 1%;
+  border-radius: 5px;
+  border: 1px solid #444;
+}
+#sub {
+  background-color: rgba(80, 80, 77, 0.4);
+  color: whitesmoke;
+  text-align: center;
+  background-size: 50%;
+  margin-left: 0.5%;
+  margin-right: 30%;
+  padding: 1%;
+  border-radius: 5px;
+  border: 1px solid #444;
+
+}
+
+.city {
+  text-align: center;
+  font-family: "Segoe UI";
+  word-spacing: 10%;
 }
 footer {
-  text-align: end;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
-  margin-top: -3%;
-  margin-bottom: 3%;
+  margin-top: -2.5%;
+  margin-bottom: 10%;
   margin-right: 3%;
   margin-left: 3%;
+  text-align: end;
 }
