--- a/CSS/verse.css
+++ b/CSS/verse.css
@@ -2,6 +2,41 @@ body {
   background-color: rgba(34, 32, 32, 0.966);
   color: white;
 }
+
+
+.navbar {
+  
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 h3 {
   text-align: start;
   font-size: 30px;
@@ -19,7 +54,6 @@ h2 {
   font-size: 40px;
   font-weight: normal;
   font-family: "Segoe UI";
-  border: 4px solid green;
   margin-bottom: 20px;
 }
 .strong ul{
@@ -29,7 +63,6 @@ h2 {
 }
 #box {
   text-align: end;
-  border: 4px solid yellow;
   margin-top: 0%;
 }
 
