--- a/CSS/verse.css
+++ b/CSS/verse.css
@@ -5,42 +5,15 @@ body {
 
 
 .navbar {
-  
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-bottom: 1px solid #444;
+  padding-bottom: 10px;
+  margin-bottom: 5px;
+  gap: 20px;
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-h3 {
-  text-align: start;
-  font-size: 30px;
-}
 a {
   text-decoration: none;
   color: white;
@@ -50,8 +23,24 @@ a {
   font-family: sans-serif;
   margin: 10px;
 }
+
+.navbar h3 {
+  font-size: 1.5rem;
+  text-align: start;
+  font-size: 30px;
+}
+
+#button {
+  background: rgba(34, 32, 32, 0.966);
+  color: #fff;
+  border: 1px solid #666;
+  padding: 15px;
+  border-radius: 10px;
+  margin-left: 48%;
+}
+
 h2 {
-  font-size: 40px;
+  font-size: 250%;
   font-weight: normal;
   font-family: "Segoe UI";
   margin-bottom: 20px;
